[gd_scene load_steps=2 format=3 uid="uid://bpwhrmsfh71hy"]

[ext_resource type="Script" path="res://Lobby/Lobby.gd" id="1"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0

[node name="LobbyPanel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -140.0
offset_right = 265.0
offset_bottom = 153.0

[node name="AddressLabel" type="Label" parent="LobbyPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0

[node name="HostButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -44.5
offset_right = 66.0
offset_bottom = -13.5
text = "Host"

[node name="JoinButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 197.0
offset_top = 156.0
offset_right = 327.0
offset_bottom = 185.0
text = "Join"

[connection signal="pressed" from="LobbyPanel/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="LobbyPanel/JoinButton" to="." method="_on_JoinButton_pressed"]
